# chimereceline

./: .gitignore  pyproject.toml
src/chimereceline/: __init__.py  collection.py  constants.py  phenomena.py  stations.py  timeseries.py  utils.py
src/chimereceline/resources/: phenomena.json  stations.json
tests/: test_collections.py  test_stations.py  test_utils.py
