[project]
name = "chimereceline"
version = "0.1.0"
description = "Get IRCELINE data and compare them with CHIMERE outputs"
license = { file = "LICENSE" }
authors = [
    {name = "Tristan Carion",email = "tristancarion@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
]

[tool.poetry]
packages = [{include = "chimereceline", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
